# openapi/wms-api.yaml
@@ -494,7 +494,7 @@ paths:
         '409':
           $ref: '#/components/responses/OptimisticLockConflict'
 
-  /api/v1/master/warehouses/{id}/deactivate:
+  /api/v1/master/warehouses/{id}/toggle-active:
     patch:
       operationId: toggleWarehouseActive
       summary: 倉庫無効化／有効化
@@ -725,7 +725,7 @@ paths:
         '409':
           $ref: '#/components/responses/OptimisticLockConflict'
 
-  /api/v1/master/buildings/{id}/deactivate:
+  /api/v1/master/buildings/{id}/toggle-active:
     patch:
       operationId: toggleBuildingActive
       summary: 棟無効化／有効化
@@ -933,7 +933,7 @@ paths:
         '409':
           $ref: '#/components/responses/OptimisticLockConflict'
 
-  /api/v1/master/areas/{id}/deactivate:
+  /api/v1/master/areas/{id}/toggle-active:
     patch:
       operationId: toggleAreaActive
       summary: エリア無効化／有効化
@@ -1194,7 +1194,7 @@ paths:
         '409':
           $ref: '#/components/responses/OptimisticLockConflict'
 
-  /api/v1/master/locations/{id}/deactivate:
+  /api/v1/master/locations/{id}/toggle-active:
     patch:
       operationId: toggleLocationActive
       summary: ロケーション無効化／有効化
@@ -1410,7 +1410,7 @@ paths:
         '409':
           $ref: '#/components/responses/OptimisticLockConflict'
 
-  /api/v1/master/partners/{id}/deactivate:
+  /api/v1/master/partners/{id}/toggle-active:
     patch:
       operationId: togglePartnerActive
       summary: 取引先無効化／有効化
@@ -1675,7 +1675,7 @@ paths:
                     errorCode: CANNOT_CHANGE_EXPIRY_MANAGE_FLAG
                     message: 在庫が存在するため、賞味/使用期限管理フラグは変更できません
 
-  /api/v1/master/products/{id}/deactivate:
+  /api/v1/master/products/{id}/toggle-active:
     patch:
       operationId: toggleProductActive
       summary: 商品無効化／有効化
@@ -1938,7 +1938,7 @@ paths:
                     errorCode: CANNOT_DEACTIVATE_SELF
                     message: 自分自身を無効化することはできません
 
-  /api/v1/master/users/{id}/deactivate:
+  /api/v1/master/users/{id}/toggle-active:
     patch:
       operationId: toggleUserActive
       summary: ユーザー無効化/有効化
